--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Mathieu Ravaux's Git Achievements</h2>
-Unlocked       20/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 197 points<br>
+Unlocked       20/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 200 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -34,6 +34,7 @@ Unlocked       20/      50 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Hunter (Level 2)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
 <li><div class="title">Apprentice Hunter (Level 3)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
 <li><div class="title">Apprentice Investigator (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
+<li><div class="title">Apprentice Investigator (Level 2)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Merchant (Level 2)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Merchant (Level 3)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
@@ -68,47 +69,47 @@ Unlocked       20/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-26169 rev-parse
-25602 symbolic-ref
- 675 status
- 459 push
- 221 up
- 215 Mer
- 212 diff
- 190 stash
- 172 add
- 146 Ven
+27312 rev-parse
+26723 symbolic-ref
+ 694 status
+ 485 push
+ 239 Mer
+ 237 up
+ 231 diff
+ 207 stash
+ 178 add
+ 149 Ven
+ 140 Lun
+ 118 Jeu
  115 pull
- 110 Jeu
- 106 Lun
-  91 Sam
+  93 Sam
+  79 checkout
+  76 remote
   74 Mar
-  71 remote
-  70 st
-  54 checkout
+  71 st
   31 config
-  26 co
+  27 co
   26 Dim
   25 rm
   22 submodule
-  21 rebase
-  17 fetch
+  22 rebase
+  21 fetch
+  15 commit
   15 clone
   15 branches
-  14 commit
   12 pul
   10 init
+   9 bisect
    8 ls-files
    8 branch
-   8 bisect
    7 ci
    6 merge
    6 instaweb
    6 achievements
    4 chore
+   4 blame
    3 log
    3 contrib
-   3 blame
    2 tag
    2 reflog
    2 help
