--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Mathieu Ravaux's Git Achievements</h2>
-Unlocked       20/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 200 points<br>
+Unlocked       21/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 202 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -21,6 +21,7 @@ Unlocked       20/      50 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Banker (Level 1)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Apprentice Banker (Level 2)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
+<li><div class="title">Apprentice Butcher (Level 1)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Apprentice Cathedral Worker (Level 1)</div>  <div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
 <li><div class="title">Apprentice Cathedral Worker (Level 2)</div>  <div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
 <li><div class="title">Apprentice Cathedral Worker (Level 3)</div>  <div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
@@ -69,8 +70,8 @@ Unlocked       20/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-27312 rev-parse
-26723 symbolic-ref
+27317 rev-parse
+26728 symbolic-ref
  694 status
  485 push
  239 Mer
@@ -91,8 +92,8 @@ Git commands sorted by usage:
   27 co
   26 Dim
   25 rm
+  23 rebase
   22 submodule
-  22 rebase
   21 fetch
   15 commit
   15 clone
@@ -141,7 +142,6 @@ There are       50 Achievements. Some achievements can be leveled up depending o
 <li><div class="title">Archivist</div><div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Baptised</div><div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Beach Lion</div><div class="info">Restricted login shell for GIT-only SSH access with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-shell.html">git-shell</a></div></li>
-<li><div class="title">Butcher</div><div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Carpenter</div><div class="info">Custom <a href="http://www.kernel.org/pub/software/scm/git/docs/githooks.html">git-hooks</a> are installed which help catch issues before they are shared.</div></li>
 <li><div class="title">Cathedral Architect</div><div class="info">Added a submodule to a repository.</div></li>
 <li><div class="title">Cherry Picker</div><div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
